--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Terraform provier directory
+# Terraform provider directory
 .terraform
+.terraform.lock.hcl
 
 # Terraform state
 terraform.tfstate
@@ -19,3 +20,37 @@ secrets
 
 # Compiled Python3
 *.pyc
+
+# --
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+*.tfplan
+
+# Crash log files
+crash.log
+
+# Exclude all .tfvars files, which are likely to contain sentitive data, such as
+# password, private keys, and other secrets. These should not be part of version
+# control as they are data points which are potentially sensitive and subject
+# to change depending on the environment.
+*.tfvars
+
+# Ignore override files as they are usually used to override resources locally and so
+# are not checked in
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Ignore CLI configuration files
+.terraformrc
+terraform.rc
+
+# K8s deployment files
+*.yml
+*.yaml
+
